[gd_scene load_steps=15 format=3 uid="uid://bn5xu7vfc1hr7"]

[ext_resource type="Script" path="res://scripts/checkpoints/end_checkpoint.gd" id="1_bggn0"]
[ext_resource type="Texture2D" uid="uid://dqp36u0pvpkv7" path="res://sprites/Checkpoints/End/End (Idle).png" id="1_injp2"]
[ext_resource type="Texture2D" uid="uid://ufeweog0nb0h" path="res://sprites/Checkpoints/End/End (Pressed) (64x64).png" id="2_57mfe"]
[ext_resource type="PackedScene" uid="uid://bjyipamtplq46" path="res://scenes/checkpoints/confetti_particles.tscn" id="4_6w35t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bsshc"]
atlas = ExtResource("2_57mfe")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ek4lv"]
atlas = ExtResource("2_57mfe")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3dkv"]
atlas = ExtResource("2_57mfe")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0oat5"]
atlas = ExtResource("2_57mfe")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4woop"]
atlas = ExtResource("2_57mfe")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8uvw"]
atlas = ExtResource("2_57mfe")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3p2rj"]
atlas = ExtResource("2_57mfe")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjbyu"]
atlas = ExtResource("2_57mfe")
region = Rect2(448, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_6gg6r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_injp2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsshc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek4lv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3dkv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0oat5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4woop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8uvw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3p2rj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjbyu")
}],
"loop": false,
"name": &"hit",
"speed": 20.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lbd48"]
size = Vector2(24, 17)

[node name="EndCheckpoint" type="StaticBody2D"]
z_index = 15
collision_mask = 2
script = ExtResource("1_bggn0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_6gg6r")
autoplay = "default"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-17, 32, -17, -12, -12, -12, -12, 5, 12, 5, 12, -12, 17, -12, 17, 32)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, -6)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_lbd48")

[node name="CPUParticles2D" parent="." instance=ExtResource("4_6w35t")]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
